# embreeUnityPlugin

./: .gitignore  .gitmodules  CMakeLists.txt
plugin_src/: CMakeLists.txt  voxel_visibility_checker.cpp  voxel_visibility_checker.h
src/: main.cpp
